wip -- fixes bug with off-screen elements on vertically short pixel dimensions.

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,10 @@ p, h1, h2, h3, h4, h5, h6 {
 body {
   display: flex;
   align-items: center;
-  justify-content: center;
+  /*justify-content: space-between;*/
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   /*background-color: #1f1f1f;*/
